fix horizontal scroll...?

--- a/scss/ee.css
+++ b/scss/ee.css
@@ -323,13 +323,15 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   background-blend-mode: darken;
   background-size: 105%;
+  overflow: hidden;
   border-bottom: 0.5em solid white;
   display: grid;
   justify-content: center;
   align-items: center;
   font-size: 1em;
-  color: #222;
-  padding: 0px 20px 20px 20px; }
+  color: #222; }
+  .covid-news .covid-text {
+    padding: 0px 20px 20px 20px; }
   .covid-news p {
     margin-top: 0;
     color: white;
