--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -72,13 +72,16 @@
   background-color: rgba(0, 0, 0, 0.5);
   background-blend-mode: darken;
   background-size: 105%;
+  overflow: hidden;
   border-bottom: 0.5em solid white;
   display: grid;
   justify-content: center;
   align-items: center;
   font-size: 1em;
   color: #222;
-  padding: 0px 20px 20px 20px;
+  .covid-text {
+    padding: 0px 20px 20px 20px;
+  }
   p {
     margin-top: 0;
     color: white;
